--- a/package.json
+++ b/package.json
@@ -15,22 +15,24 @@
   ],
   "main": "index.js",
   "dependencies": {
-    "svgo": "^0.5.6"
+    "svgo": "^0.6.1"
   },
   "devDependencies": {
     "assert-dir-equal": "^1.0.1",
-    "metalsmith": "^1.0.1",
-    "tap-spec": "^4.1.0",
-    "tape": "^4.2.0"
+    "ava": "^0.10.0",
+    "coveralls": "^2.11.6",
+    "eslint": "^1.10.3",
+    "metalsmith": "^2.1.0",
+    "nyc": "^5.3.0"
   },
   "keywords": [
     "metalsmith",
-    "typography",
     "svgo",
     "svg"
   ],
   "scripts": {
-    "test": "tape test.js | tap-spec"
+    "lint": "eslint *.js",
+    "test": "npm run lint && nyc ava test.js"
   },
   "repository": "ben-eb/metalsmith-svgo"
 }
