--- a/package.json
+++ b/package.json
@@ -9,30 +9,45 @@
     "email": "beneb.info@gmail.com",
     "url": "http://beneb.info"
   },
+  "main": "dist/index.js",
+  "scripts": {
+    "pretest": "eslint src",
+    "prepublish": "del-cli dist && BABEL_ENV=publish babel src --out-dir dist --ignore /__tests__/",
+    "test": "nyc ava src/__tests__"
+  },
   "files": [
     "LICENSE-MIT",
-    "index.js"
+    "dist"
   ],
-  "main": "index.js",
   "dependencies": {
     "svgo": "^0.6.1"
   },
   "devDependencies": {
     "assert-dir-equal": "^1.0.1",
     "ava": "^0.11.0",
+    "babel-cli": "^6.5.1",
+    "babel-core": "^6.5.2",
+    "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-es2015-loose": "^7.0.0",
+    "babel-preset-stage-0": "^6.5.0",
     "coveralls": "^2.11.6",
-    "eslint": "^1.10.3",
+    "del-cli": "^0.2.0",
+    "eslint": "^2.0.0",
+    "eslint-config-cssnano": "^2.0.0",
     "metalsmith": "^2.1.0",
-    "nyc": "^5.3.0"
+    "nyc": "^5.6.0"
   },
   "keywords": [
     "metalsmith",
     "svgo",
     "svg"
   ],
-  "scripts": {
-    "lint": "eslint *.js",
-    "test": "npm run lint && nyc ava test.js"
+  "repository": "ben-eb/metalsmith-svgo",
+  "eslintConfig": {
+    "extends": "cssnano"
   },
-  "repository": "ben-eb/metalsmith-svgo"
+  "ava": {
+    "require": "babel-core/register"
+  }
 }
