--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-es2015-loose": "^7.0.0",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.9.0",
     "coveralls": "^2.11.6",
     "del-cli": "^0.2.0",
-    "eslint": "^2.0.0",
-    "eslint-config-cssnano": "^2.0.0",
+    "eslint": "^3.0.0",
+    "eslint-config-cssnano": "^3.0.0",
+    "eslint-plugin-babel": "^3.3.0",
+    "eslint-plugin-import": "^1.10.2",
     "metalsmith": "^2.1.0",
     "nyc": "^6.0.0"
   },
@@ -48,6 +51,6 @@
     "extends": "cssnano"
   },
   "ava": {
-    "require": "babel-core/register"
+    "require": "babel-register"
   }
 }
